# Forge-Repo

./: Cargo.toml  README.md  install.sh
src/: config.rs  error.rs  main.rs  platform.rs
src/client/: api.rs  download.rs  mod.rs
src/commands/: catalog.rs  info.rs  install.rs  list.rs  login.rs  mod.rs  uninstall.rs  upgrade.rs  verify.rs
src/state/: local.rs
