[package]
name = "forge"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
indicatif = "0.17"
dialoguer = "0.11"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
colored = "2"
futures-util = "0.3"
hostname = "0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
